---
source: src/parser.rs
expression: "parse(\"(this-is-a-test \\\"RST\\\" #aaaaaa)\")"
---
Ok(
    [
        Call(
            [
                Var(
                    "this-is-a-test",
                ),
                StringLiteral(
                    "RST",
                ),
                ColorLiteral(
                    "aaaaaa",
                ),
            ],
        ),
    ],
)
